--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,8 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
+
+# Build artifacts
+bin/
+*.so
+ghops
