Refactor plugin Execute ctx and add notifier subscriptions/tests

--- a/examples/config.yaml
+++ b/examples/config.yaml
@@ -12,9 +12,13 @@ core:
 pushover:
   token: "push_token"
   user: "push_user"
+  subscribe:
+    - "notify_*"
 
 webhook:
   url: "https://example.com/notify"
+  subscribe:
+    - "deploy_*"
 
 webhook_trigger:
   port: "8082"
